<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="adandroid.v2.appnovovipclientelegal.view.LoginActivity">

    <TextView
        android:id="@+id/txtAppName"
        android:layout_width="383dp"
        android:layout_height="37dp"
        android:layout_margin="16dp"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="383dp"
        android:layout_height="37dp"
        android:layout_margin="16dp"
        android:gravity="center_horizontal"
        android:text="@string/txtlogin"
        android:textColor="@color/blue"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtAppName" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="60dp"
        android:layout_height="26dp"
        android:text="@string/txtE_mail"
        android:textColor="@color/verde"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtLogin"
        tools:layout_editor_absoluteY="228dp" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/edtEmail"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.119"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail"
        tools:ignore="TextFields" />


    <TextView
        android:id="@+id/txtSenhaA"
        android:layout_width="120dp"
        android:layout_height="33dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/txtSenha"
        android:textColor="@color/verde"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail" />

    <EditText
        android:id="@+id/edtSenhaB"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/txtSenha_vip"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.562"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSenhaA"
        tools:ignore="TextFields" />


    <CheckBox
        android:id="@+id/cbkLembrar"
        android:layout_width="138dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:text="@string/txtlembrar"
        android:textColor="@color/verde"
        android:onClick="lembraSenha"
        app:layout_constraintEnd_toStartOf="@+id/txtRecuperar"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtSenhaB" />

    <TextView
        android:id="@+id/txtRecuperar"
        android:layout_width="159dp"
        android:layout_height="53dp"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:gravity="center"
        android:text="@string/Recuperar_senha"
        android:textColor="@color/verde"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtSenhaB" />

    <Button
        android:id="@+id/btnAcessar"
        android:layout_width="170dp"
        android:layout_height="62dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:text="@string/btnAcessar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbkLembrar" />

    <Button
        android:id="@+id/btnSejaViP"
        android:layout_width="170dp"
        android:layout_height="62dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="16dp"
        android:text="@string/btnSejaVip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btnAcessar"
        app:layout_constraintTop_toBottomOf="@+id/txtRecuperar" />

    <TextView
        android:id="@+id/txtVersao"
        android:layout_width="98dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/txtVersao"
        android:textColor="@color/verde"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSejaViP" />

    <TextView
        android:id="@+id/txtTermo"
        android:layout_width="384dp"
        android:layout_height="37dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/TxtTermo"
        android:textColor="@color/verde"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtVersao" />
</androidx.constraintlayout.widget.ConstraintLayout>