<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="adandroid.v2.appnovovipclientelegal.view.PessoaFisicaActivity">


    <TextView
        android:id="@+id/txtAppName"
        android:layout_width="383dp"
        android:layout_height="37dp"
        android:layout_margin="16dp"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView

        android:id="@+id/txtPFisica"
        android:layout_width="380dp"
        android:layout_height="36dp"
        android:layout_margin="16dp"
        android:layout_marginTop="36dp"
        android:gravity="center_horizontal"
        android:text="@string/pessoa_fisica"
        android:textColor="@color/blue"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAppName" />

    <TextView
        android:id="@+id/txtCPF"
        android:layout_width="142dp"
        android:layout_height="27dp"
        android:layout_marginTop="36dp"
        android:text="@string/cpf"
        android:textColor="@color/verde"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtPFisica" />

    <EditText
        android:id="@+id/edtCPF"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/digite_seu_cpf"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCPF" />

    <TextView
        android:id="@+id/txtNomeCompleto"
        android:layout_width="137dp"
        android:layout_height="33dp"
        android:layout_marginTop="16dp"
        android:text="@string/nome_completo"
        android:textColor="@color/verde"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtCPF" />

    <EditText
        android:id="@+id/edtNomeCompleto"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/digite_seu_nome_completo"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNomeCompleto"
        tools:ignore="TextFields" />



    <Button
        android:id="@+id/btnSalvarContinuar"
        android:layout_width="361dp"
        android:layout_height="54dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/btnSalvarContinuar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNomeCompleto" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="362dp"
        android:layout_height="53dp"
        android:layout_marginTop="16dp"
        android:text="@string/btnCancelar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.408"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSalvarContinuar" />
    <Button
        android:id="@+id/btnVoltar"
        android:layout_width="362dp"
        android:layout_height="53dp"
        android:layout_marginTop="16dp"
        android:text="@string/btnvoltar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.408"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCancelar" />


</androidx.constraintlayout.widget.ConstraintLayout>